# entra-skills

./: .gitignore  AGENTS.md  README.md
.github/agents/: entra-admin.agent.md  entra-app-wizard.agent.md  entra-security-auditor.agent.md
.github/instructions/: entra-conventions.instructions.md  entra-security.instructions.md
.github/skills/azure-identity-dotnet/: SKILL.md
.github/skills/azure-identity-py/: SKILL.md
.github/skills/azure-rbac/: SKILL.md
.github/skills/entra-admin-consent-permissions/: SKILL.md
.github/skills/entra-agent-id/: SKILL.md
.github/skills/entra-agent-id-runtime/: SKILL.md
.github/skills/entra-app-registration/: SKILL.md
.github/skills/entra-audit-signin-logs/: SKILL.md
.github/skills/entra-authentication-methods/: SKILL.md
.github/skills/entra-conditional-access/: SKILL.md
.github/skills/entra-external-id/: SKILL.md
docs/: BACKLOG.md  PLAN.md
mcp-servers/entra-graph-py/: README.md  pyproject.toml
mcp-servers/entra-graph-py/src/entra_graph_mcp/: __init__.py  __main__.py  graph_client.py  server.py  tools_agent_identity.py  tools_apps.py  tools_diagnostics.py  tools_governance.py  tools_id_protection.py  tools_rbac.py  tools_users_groups.py  tools_workload_id.py
mcp-servers/entra-graph-py/tests/: conftest.py  test_tools_agent_identity.py  test_tools_apps.py  test_tools_diagnostics.py  test_tools_governance.py  test_tools_id_protection.py  test_tools_rbac.py  test_tools_users_groups.py  test_tools_workload_id.py
mcp-servers/entra-infra-ts/: README.md  package-lock.json  package.json
tests/: agent-test-scenarios.md
(+12 files in other folders)
